old_yamls/emby/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: emby
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
  - host: emby.vynology.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: emby
          servicePort: 8096
